/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option csharp_namespace = "Energinet.DataHub.EnergySupplying.RequestResponse.InboxEvents";

message ActorMessagesEnqueuedV1 {
  string orchestration_instance_id = 1; // The id of the workflow that the messages were enqueued for.
  string calculation_id = 2; // The messages were enqueued for this calculation.
  bool success = 3; // True if all messages were enqueued successfully, false otherwise.
}
