/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "Energinet.DataHub.Wholesale.Contracts.IntegrationEvents";


 /*
 * When a calculation is successfully completed, this event is published.
 */
message CalculationCompletedV1 {
  /*
   * The ID of the calculation creating the result.
   * The ID is a UUID consisting of hexadecimal digits in the form XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX.
   * Example: 65801e3c-5131-426e-b1bb-7b186349c996
   */
  string calculation_id = 1;

  /*
   * The ID of the workflow responsible for the calculation.
   * The ID is a UUID consisting of hexadecimal digits in the form XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX.
   * Example: 65801e3c-5131-426e-b1bb-7b186349c996
   */
  string instance_id = 2;
  
  CalculationType calculation_type = 3;
  
  /*
  * Is the version number corresponding to the calculation for the given type and period.
  */
  int64 calculation_version = 4;

  /*
   * When calculation is internal, the calculation result is for internal use only
   * and should not be exposed to external user.
   */
  bool is_internal_calculation = 5;
  
  enum CalculationType {
  /*
   * Unspecified is unused but according to best practice.
   * Read more at https://protobuf.dev/programming-guides/style/#enums.
   */
    CALCULATION_TYPE_UNSPECIFIED = 0;
    CALCULATION_TYPE_BALANCE_FIXING = 1;
    CALCULATION_TYPE_AGGREGATION = 2;
    CALCULATION_TYPE_WHOLESALE_FIXING = 3;
    CALCULATION_TYPE_FIRST_CORRECTION_SETTLEMENT = 4;
    CALCULATION_TYPE_SECOND_CORRECTION_SETTLEMENT = 5;
    CALCULATION_TYPE_THIRD_CORRECTION_SETTLEMENT = 6;
  }
}
